fixed spacing issues w/ nav

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
 .clr {
   clear:both;
 }
@@ -11,12 +12,25 @@
   width: 100%;
 }
 
-.navbar .container {
-  margin: 5px;
+.content {
+  margin: 15px;
+  padding: 10px;
 }
 
-.navbar-fixed-top {
+.navbar .container-fluid {
+  margin-right: 15px;
+  padding-top: 5px;
+}
+
+.navbar h1 {
+  margin: 0;
+  padding: 0;
+  text-align: right;
+}
+
+.navbar-static-top {
   width:100%;
+  background:transparent !important;
 }
 
 .navbar {
@@ -24,16 +38,16 @@
   width:100%;
 }
 
-.navbar-collapse > .dropdown-menu {
-    background:transparent !important;
-}
+
+
+
 
 // Footer
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    height: 140px;
 }
 
 .footer-container {
